# gastown-demo

./: .gitignore  CLAUDE.md  README.md  manifest  pyproject.toml
.github/workflows/: ci.yml
src/gastown_demo/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
