[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gastown-demo"
version = "0.1.0"
description = "A tiny, extensible task-manager CLI — demo app for the Gas Town talk."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Ingo Eichhorst" }]
dependencies = []

[project.scripts]
gtdemo = "gastown_demo.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.hatch.build.targets.wheel]
packages = ["src/gastown_demo"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
